# nfc-laboratory

./: .gdbinit  .gitignore  CMakeLists.txt  CONTRIBUTING.md  FLATPAK.md  LICENSE  README.md  build-installer.ps1  build-runenv.ps1  com.github.josevcm.nfc-laboratory.yml  index.md  io.github.josevcm.nfc-laboratory.yml
src/nfc-app/app-qt/: CMakeLists.txt
src/nfc-app/app-qt/src/main/assets/app/: app.qrc
src/nfc-app/app-qt/src/main/assets/icons/: icons.qrc
src/nfc-app/app-qt/src/main/assets/shader/: shaders.qrc
src/nfc-app/app-qt/src/main/assets/texture/: texture.qrc
src/nfc-app/app-qt/src/main/cpp/: .gitignore  QtApplication.cpp  QtApplication.h  QtCache.cpp  QtCache.h  QtConfig.h  QtConfig.h.in  QtControl.cpp  QtControl.h  QtDecoder.cpp  QtDecoder.h  QtMemory.cpp  QtMemory.h  QtResources.cpp  QtResources.h  QtServer.cpp  QtServer.h  QtStorage.cpp  QtStorage.h  QtWindow.cpp  QtWindow.h  QtWindow.ui  main.cpp  main.rc  main.rc.in  tests.cpp
src/nfc-app/app-qt/src/main/cpp/comp/: QHexView.cpp  QHexView.h
src/nfc-app/app-qt/src/main/cpp/dialogs/: ConfigDialog.cpp  ConfigDialog.h  ConfigDialog.ui  InspectDialog.cpp  InspectDialog.h  InspectDialog.ui  LicenseDialog.cpp  LicenseDialog.h  LicenseDialog.ui
src/nfc-app/app-qt/src/main/cpp/events/: ConsoleLogEvent.cpp  ConsoleLogEvent.h  DecoderControlEvent.cpp  DecoderControlEvent.h  DecoderStatusEvent.cpp  DecoderStatusEvent.h  FourierStatusEvent.cpp  FourierStatusEvent.h  LogicDecoderStatusEvent.cpp  LogicDecoderStatusEvent.h  LogicDeviceStatusEvent.cpp  LogicDeviceStatusEvent.h  RadioDecoderStatusEvent.cpp  RadioDecoderStatusEvent.h  RadioDeviceStatusEvent.cpp  RadioDeviceStatusEvent.h  ReceiverStatusEvent.cpp  ReceiverStatusEvent.h  SignalBufferEvent.cpp  SignalBufferEvent.h  StorageControlEvent.cpp  StorageControlEvent.h  StorageStatusEvent.cpp  StorageStatusEvent.h  StreamFrameEvent.cpp  StreamFrameEvent.h  SystemShutdownEvent.cpp  SystemShutdownEvent.h  SystemStartupEvent.cpp  SystemStartupEvent.h
src/nfc-app/app-qt/src/main/cpp/features/: Caps.cpp  Caps.h
src/nfc-app/app-qt/src/main/cpp/format/: DataFormat.cpp  DataFormat.h
src/nfc-app/app-qt/src/main/cpp/graph/: AxisLabel.cpp  AxisLabel.h  AxisTickerFrequency.cpp  AxisTickerFrequency.h  ChannelGraph.cpp  ChannelGraph.h  ChannelStyle.h  CursorMarker.cpp  CursorMarker.h  FrameData.cpp  FrameData.h  FrameGraph.cpp  FrameGraph.h  MarkerBracket.cpp  MarkerBracket.h  MarkerCursor.cpp  MarkerCursor.h  MarkerPeaks.cpp  MarkerPeaks.h  MarkerRange.cpp  MarkerRange.h  MarkerRibbon.cpp  MarkerRibbon.h  MarkerValue.cpp  MarkerValue.h  MarkerZoom.cpp  MarkerZoom.h  QCPAxisCursorMarker.cpp  QCPAxisCursorMarker.h  QCPAxisRangeMarker.cpp  QCPAxisRangeMarker.h  QCPAxisTickerFrequency.cpp  QCPAxisTickerFrequency.h  QCPCursorMarker.cpp  QCPCursorMarker.h  QCPGraphMarkerList.cpp  QCPGraphMarkerList.h  QCPRangeMarker.cpp  (+11 more)
src/nfc-app/app-rx/: CMakeLists.txt
src/nfc-app/app-rx/src/main/cpp/: main.cpp
src/nfc-app/app-tx/: CMakeLists.txt
src/nfc-app/app-tx/src/main/cpp/: SerialSi5351.cpp  SerialSi5351.h  main.cpp
src/nfc-lib/lib-ext/: CMakeLists.txt
src/nfc-lib/lib-ext/airspy/: CMakeLists.txt
src/nfc-lib/lib-ext/airspy-tools/: CMakeLists.txt
src/nfc-lib/lib-ext/blosc/: CMakeLists.txt
src/nfc-lib/lib-ext/crapto1/: CMakeLists.txt
src/nfc-lib/lib-ext/dslogic/: CMakeLists.txt
src/nfc-lib/lib-ext/ed25519/: CMakeLists.txt
src/nfc-lib/lib-ext/filesystem/: CMakeLists.txt
src/nfc-lib/lib-ext/hydrasdr/: CMakeLists.txt
src/nfc-lib/lib-ext/lime/: CMakeLists.txt  CMakeLists.txt.old
src/nfc-lib/lib-ext/lime/QuickTest/: .gitmodules  CMakeLists.txt
src/nfc-lib/lib-ext/lime/QuickTest/resources/: resource.rc
src/nfc-lib/lib-ext/lime/mcu_program/common_src/: spi.h
src/nfc-lib/lib-ext/lime/mcu_program/mcu_src/: main.c  spi.c
src/nfc-lib/lib-ext/lime/src/: CMakeLists.txt  Logger.cpp  lms7suiteApp_gui.cpp  lms7suiteApp_gui.h
src/nfc-lib/lib-ext/lime/src/API/: lms7_api.cpp
src/nfc-lib/lib-ext/lime/src/ConnectionFTDI/: CMakeLists.txt  ConnectionFT601.cpp  ConnectionFT601.h  ConnectionFT601Entry.cpp
src/nfc-lib/lib-ext/lime/src/ConnectionRegistry/: BuiltinConnections.in.cpp
src/nfc-lib/lib-ext/lime/src/ConnectionXillybus/: CMakeLists.txt
src/nfc-lib/lib-ext/lime/src/examples/: limeRFE_H.py  limeRFE_I2C_example.cpp  limeRFE_Python_example.py  limeRFE_USB_example.cpp
src/nfc-lib/lib-ext/lime/src/limeRFE/: CMakeLists.txt  limeRFE.fbp  limeRFE.h  limeRFE_cmd.cpp  limeRFE_constants.h
src/nfc-lib/lib-ext/lime/src/lms7002m/: LMS7002M.cpp
src/nfc-lib/lib-ext/lime/src/threadHelper/: threadHelper.cpp
src/nfc-lib/lib-ext/microtar/: CMakeLists.txt
src/nfc-lib/lib-ext/mirisdr/: CMakeLists.txt
src/nfc-lib/lib-ext/mufft/: CMakeLists.txt
src/nfc-lib/lib-ext/nlohmann/: CMakeLists.txt
src/nfc-lib/lib-ext/posix/: CMakeLists.txt
src/nfc-lib/lib-ext/rtlsdr/: CMakeLists.txt
src/nfc-lib/lib-ext/xtensor/: CMakeLists.txt
src/nfc-lib/lib-ext/xtensor/xtensor/: CMakeLists.txt
src/nfc-lib/lib-ext/xtensor/xtensor-io/: CMakeLists.txt  LICENSE  README.md
src/nfc-lib/lib-ext/xtensor/xtensor-zarr/: CMakeLists.txt
src/nfc-lib/lib-ext/xtensor/xtl/: CMakeLists.txt  README.md
src/nfc-lib/lib-ext/xtensor/zarray/: CMakeLists.txt  LICENSE  README.md
src/nfc-lib/lib-ext/z5/: CMakeLists.txt  LICENSE  README.md
src/nfc-lib/lib-gl/gl-engine/: CMakeLists.txt
src/nfc-lib/lib-hw/hw-dev/: CMakeLists.txt
src/nfc-lib/lib-hw/hw-logic/: CMakeLists.txt
src/nfc-lib/lib-hw/hw-radio/: CMakeLists.txt
src/nfc-lib/lib-lab/lab-data/: CMakeLists.txt
src/nfc-lib/lib-lab/lab-logic/: CMakeLists.txt
src/nfc-lib/lib-lab/lab-radio/: CMakeLists.txt
src/nfc-test/app-test/: CMakeLists.txt
src/nfc-test/app-test/src/main/cpp/: main.cpp
src/nfc-test/sdr-test/: CMakeLists.txt
src/nfc-test/sdr-test/src/main/cpp/: main.cpp
src/nfc-test/test-dio/: CMakeLists.txt
src/nfc-test/test-dio/src/main/cpp/: main.cpp
src/nfc-test/test-parser/: CMakeLists.txt
src/nfc-test/test-parser/src/main/cpp/: main.cpp
src/nfc-test/test-sdr/: CMakeLists.txt
src/nfc-test/test-sdr/src/main/cpp/: main.cpp
(+878 files in other folders)
