add_subdirectory(airspy)
add_subdirectory(blosc)
add_subdirectory(hydrasdr)
add_subdirectory(ed25519)
add_subdirectory(filesystem)
add_subdirectory(nlohmann)
add_subdirectory(microtar)
add_subdirectory(mufft)
add_subdirectory(rtlsdr)
add_subdirectory(mirisdr)
add_subdirectory(xtensor)
add_subdirectory(z5)



